data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3077.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7f\02\94\80\80\80\00\01\03\6d\6f\64\0c"
    "\6d\75\6c\74\69\5f\72\65\74\75\72\6e\00\00\03\82"
    "\80\80\80\00\01\00\0a\8c\80\80\80\00\01\86\80\80"
    "\80\00\00\10\00\0f\0f\0b"
  )
""
)